--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           <h2 class="visually-hidden">Main principles</h2>
           <ul class="principles-list">
             <li class="principles-list-item">
+              <div class="principles-icon-container">
+                <svg class="principles-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="principles-name">Strategy</h3>
               <p class="principles-content">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,11 @@
               </p>
             </li>
             <li class="principles-list-item">
+              <div class="principles-icon-container">
+                <svg class="principles-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="principles-name">Punctuality</h3>
               <p class="principles-content">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +96,11 @@
               </p>
             </li>
             <li class="principles-list-item">
+              <div class="principles-icon-container">
+                <svg class="principles-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="principles-name">Diligence</h3>
               <p class="principles-content">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +108,11 @@
               </p>
             </li>
             <li class="principles-list-item">
+              <div class="principles-icon-container">
+                <svg class="principles-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="principles-name">Technologies</h3>
               <p class="principles-content">
                 Design practice focused on digital experiences. We bring forth a
@@ -117,12 +137,100 @@
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-ocupation">Product Designer</p>
               </div>
+              <div class="team-socials-wrap">
+                <ul class="team-socials-list">
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.twitter.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/tom-ford.jpg" width="264" alt="tom-ford" />
               <div class="team-inner">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-ocupation">Frontend Developer</p>
+              </div>
+              <div class="team-socials-wrap">
+                <ul class="team-socials-list">
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.twitter.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -135,6 +243,50 @@
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-ocupation">Marketing</p>
               </div>
+              <div class="team-socials-wrap">
+                <ul class="team-socials-list">
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.twitter.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -146,6 +298,50 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-ocupation">UI Designer</p>
               </div>
+              <div class="team-socials-wrap">
+                <ul class="team-socials-list">
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.twitter.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="team-socials-link"
+                    >
+                      <svg class="team-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -156,66 +352,114 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="banking-app"
-                width="360"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-picture"
+                  src="./images/banking-app.jpg"
+                  alt="banking-app"
+                  width="360"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-inner">
                 <h3 class="portfolio-item-name">Banking App</h3>
                 <p class="portfolio-item-type">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="cashless-payment"
-                width="360"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-picture"
+                  src="./images/cashless-payment.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-inner">
                 <h3 class="portfolio-item-name">Cashless Payment</h3>
                 <p class="portfolio-item-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="meditation-app"
-                width="360"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-picture"
+                  src="./images/meditation-app.jpg"
+                  alt="meditation-app"
+                  width="360"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-inner">
                 <h3 class="portfolio-item-name">Meditation App</h3>
                 <p class="portfolio-item-type">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="taxi-service"
-                width="360"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-picture"
+                  src="./images/taxi-service.jpg"
+                  alt="taxi-service"
+                  width="360"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-inner">
                 <h3 class="portfolio-item-name">Taxi Service</h3>
                 <p class="portfolio-item-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="screen-illustrations"
-                width="360"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-picture"
+                  src="./images/screen-illustrations.jpg"
+                  alt="screen-illustrations"
+                  width="360"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-inner">
                 <h3 class="portfolio-item-name">Screen Illustrations</h3>
                 <p class="portfolio-item-type">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="online-courses"
-                width="360"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-picture"
+                  src="./images/online-courses.jpg"
+                  alt="online-courses"
+                  width="360"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-inner">
                 <h3 class="portfolio-item-name">Online Courses</h3>
                 <p class="portfolio-item-type">Marketing</p>
@@ -228,13 +472,48 @@
 
     <footer class="footer-section section">
       <div class="footer-container container">
-        <a class="logo-footer" href="./index.html">
-          Web<span class="logo-web-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-wrapper">
+          <a class="logo-footer" href="./index.html">
+            Web<span class="logo-web-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials-wrapper">
+          <p class="footer-socials-name">Social media</p>
+          <ul class="footer-socials-list">
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="https://www.instagram.com/">
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="https://www.twitter.com/">
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="https://www.facebook.com/">
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="https://www.linkedin.com/">
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
