--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           >
           <ul class="page-links-list">
             <li>
-              <a class="page-links-item" href="./index.html">Studio</a>
+              <a class="page-links-item active" href="./index.html">Studio</a>
             </li>
             <li>
               <a class="page-links-item" href="">Portfolio</a>
@@ -136,8 +136,7 @@
               <div class="team-inner">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-ocupation">Product Designer</p>
-              </div>
-              <div class="team-socials-wrap">
+
                 <ul class="team-socials-list">
                   <li class="team-socials-item">
                     <a
@@ -182,13 +181,12 @@
                 </ul>
               </div>
             </li>
+
             <li class="team-item">
               <img src="./images/tom-ford.jpg" width="264" alt="tom-ford" />
               <div class="team-inner">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-ocupation">Frontend Developer</p>
-              </div>
-              <div class="team-socials-wrap">
                 <ul class="team-socials-list">
                   <li class="team-socials-item">
                     <a
@@ -242,8 +240,7 @@
               <div class="team-inner">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-ocupation">Marketing</p>
-              </div>
-              <div class="team-socials-wrap">
+
                 <ul class="team-socials-list">
                   <li class="team-socials-item">
                     <a
@@ -297,8 +294,6 @@
               <div class="team-inner">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-ocupation">UI Designer</p>
-              </div>
-              <div class="team-socials-wrap">
                 <ul class="team-socials-list">
                   <li class="team-socials-item">
                     <a
